--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,53 @@
   }
 }
 
+/* fonts */
+
+/* @font-face {
+  font-family: "Comic Neue";
+  src: url('../fonts/ComicNeue-Light.woff2') format('woff2'),
+       url('../fonts/ComicNeue-Light.woff') format('woff');
+  font-weight: 300;
+}
+
+@font-face {
+  font-family: "Comic Neue";
+  src: url('../fonts/ComicNeue-Light-Oblique.woff2') format('woff2'),
+       url('../fonts/ComicNeue-Light-Oblique.woff') format('woff');
+  font-weight: 300;
+  font-style: oblique;
+} */
+
+@font-face {
+  font-family: "Comic Neue";
+  src: url('../fonts/ComicNeue-Regular.woff2') format('woff2'),
+       url('../fonts/ComicNeue-Regular.woff') format('woff');
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: "Comic Neue";
+  src: url('../fonts/ComicNeue-Regular-Oblique.woff2') format('woff2'),
+       url('../fonts/ComicNeue-Regular-Oblique.woff') format('woff');
+  font-weight: 400;
+  font-style: oblique;
+}
+
+@font-face {
+  font-family: "Comic Neue";
+  src: url('../fonts/ComicNeue-Bold.woff2') format('woff2'),
+       url('../fonts/ComicNeue-Bold.woff') format('woff');
+  font-weight: 700;
+}
+
+@font-face {
+  font-family: "Comic Neue";
+  src: url('../fonts/ComicNeue-Bold-Oblique.woff2') format('woff2'),
+       url('../fonts/ComicNeue-Bold-Oblique.woff') format('woff');
+  font-weight: 700;
+  font-style: oblique;
+}
+
 /* global */
 
 *, ::after, ::before {
@@ -58,7 +105,7 @@ body {
   margin: 0;
   background-color: var(--c2);
   color: var(--c3);
-  font-family: "Comic Sans MS", cursive, sans-serif;
+  font-family: "Comic Neue", cursive, sans-serif;
   min-height: 100%;
   text-rendering: geometricPrecision;
   -webkit-font-smoothing: antialiased;
