--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,10 @@
+/* fonts */
+@font-face {
+  font-family: 'Roboto';
+  src: url('../fonts/Roboto-Thin.ttf') format('ttf');
+  font-weight: 100;
+}
+
 /* variables */
 
 :root {
@@ -58,7 +65,7 @@ body {
   margin: 0;
   background-color: var(--c2);
   color: var(--c3);
-  font-family: "Comic Sans MS", cursive, sans-serif;
+  font-family: "Roboto", sans-serif;
   min-height: 100%;
   text-rendering: geometricPrecision;
   -webkit-font-smoothing: antialiased;
@@ -142,53 +149,7 @@ button:focus {
 /* pages */
 
 .page {
-  display: none;
   padding: 30px 15px;
-}
-
-.page--active {
-  display: block;
-}
-
-/* hand */
-
-.hand-wrapper {
-  width: 100%;
-  max-width: 300px;
-}
-
-.hand-button {
-  width: 100%;
-  height: 100%;
-  background: transparent;
-  border: none;
-  color: var(--c1);
-  cursor: pointer;
-  transition: color 0.2s ease;
-}
-
-.hand-button:focus,
-.hand-button:hover,
-.hand-button:active {
-  outline: none;
-}
-
-.hand-button:focus .hand,
-.hand-button:hover .hand,
-.hand-button:active .hand {
-  transform: rotate(90deg) !important;
-  transform-origin: center;
-  animation: none;
-}
-
-.hand {
-  display: block;
-  width: 100%;
-  height: auto;
-
-  transform-origin: bottom center;
-  animation: wave 2s infinite;
-  pointer-events: none;
 }
 
 /* title */
@@ -201,8 +162,18 @@ button:focus {
   font-size: var(--title-size);
 }
 
+.title__madeby {
+  display: none;
+  position: absolute;
+  font-size: 11px;
+  font-weight: 100;
+  color: var(--c3);
+}
+
 .title__letter {
   display: block;
+  color: var(--c1);
+  font-weight: 100;
 }
 
 .title__letter:nth-child(1) {
@@ -211,32 +182,26 @@ button:focus {
 }
 
 .title__letter:nth-child(2) {
-  color: aqua;
   animation-delay: calc(var(--letter-animation-delay) * 2);
 }
 
 .title__letter:nth-child(3) {
-  color: fuchsia;
   animation-delay: calc(var(--letter-animation-delay) * 3);
 }
 
 .title__letter:nth-child(4) {
-  color: gold;
   animation-delay: calc(var(--letter-animation-delay) * 4);
 }
 
 .title__letter:nth-child(5) {
-  color: deepskyblue;
   animation-delay: calc(var(--letter-animation-delay) * 5);
 }
 
 .title__letter:nth-child(6) {
-  color: lawngreen;
   animation-delay: calc(var(--letter-animation-delay) * 6);
 }
 
 .title__letter:nth-child(7) {
-  color: #ff1493;
   animation-delay: calc(var(--letter-animation-delay) * 7);
 }
 
@@ -301,7 +266,7 @@ button:focus {
   width: var(--social-icon-size);
   height: var(--social-icon-size);
   border-radius: 50%;
-  border: 0.2rem solid var(--c1);
+  border: 0.1rem solid var(--c1);
   overflow: hidden;
   transition: all 0.8s ease;
 }
@@ -319,22 +284,17 @@ button:focus {
   bottom: 0;
   z-index: 1;
   display: block;
-  padding: 6px 8px;
-  background-color: #f1f1f1;
-  color: var(--c1);
-  border-radius: 8px;
-  text-align: center;
-  visibility: hidden;
-  opacity: 0;
-  transform: translateX(-50%) translateY(50%) translateZ(var(--social-icon-size)) rotateX(-900deg);
-  transition: all 0.8s ease;
-  will-change: transform, opacity;
+  width: 33px;
+  height: 33px;
+  padding: 8px;
+  background-color: var(--c1);
+  color: var(--c3);
+  border-radius: 50%;
+  transform: translate(-50%, 50%);
 }
 
-.socialbar__link:active .socialbar__label,
-.socialbar__link:focus .socialbar__label,
-.socialbar__link:hover .socialbar__label {
-  visibility: visible;
-  opacity: 1;
-  transform: translateX(-50%) translateY(50%) translateZ(var(--social-icon-size));
+.socialbar__label > svg {
+  display: block;
+  width: 100%;
+  height: auto;
 }
