--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,11 @@
 /* fonts */
 @font-face {
   font-family: "Roboto";
-  src: url("../fonts/Roboto-Thin.ttf") format("ttf");
+  font-style: normal;
   font-weight: 100;
+  src: local("Roboto Thin"), local("Roboto-Thin"),
+       url("../fonts/roboto/roboto-v18-latin-100.woff2") format("woff2"), /* Chrome 26+, Opera 23+, Firefox 39+ */
+       url("../fonts/roboto/roboto-v18-latin-100.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
 /* variables */
