--- a/css/main.css
+++ b/css/main.css
@@ -36,7 +36,7 @@ body {
   align-items: center;
   justify-content: center;
   margin: 0;
-  background-color: #212121;
+  background-color: #221e22;
   color: #fff;
   font-family: "Roboto", sans-serif;
   min-height: 100%;
